--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,223 @@
 @media only screen and (max-width: 767px) {
 
+
+    .profile-menu-container {
+        padding: 10px;
+    }
+    .profile-menu-container .mobile-menu-dropdown {
+        width: 100% !important;
+        padding-left: 0px;
+        padding-right: 0;
+        box-sizing: border-box;
+    }
+    .dropdown {
+        display: inline-block;
+        position: relative;
+    }
+    .dd-button {
+        display: inline-block;
+        border: 1px solid gray;
+        border-radius: 4px;
+        padding: 10px 30px 10px 20px;
+        background-color: #ffffff;
+        cursor: pointer;
+        white-space: nowrap;
+    }
+    .dd-button:after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 15px;
+        transform: translateY(-50%);
+        width: 0;
+        height: 0;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 5px solid black;
+    }
+    .dd-button:hover {
+        background-color: #eeeeee;
+    }
+    .dd-input {
+        display: none;
+    }
+    .dd-menu {
+        position: absolute;
+        top: 100%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 0;
+        margin: 2px 0 0 0;
+        box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+        background-color: #ffffff;
+        list-style-type: none;
+    }
+    .dd-input+.dd-menu {
+        display: none;
+    }
+    .dd-input:checked+.dd-menu {
+        display: block;
+    }
+    .dd-menu li {
+        padding: 10px 20px;
+        cursor: pointer;
+        white-space: nowrap;
+    }
+    .dd-menu li:hover {
+        background-color: #f6f6f6;
+    }
+    .dd-menu li a {
+        display: block;
+        margin: -10px -20px;
+        padding: 10px 20px;
+    }
+    .dd-menu li.divider {
+        padding: 0;
+        border-bottom: 1px solid #cccccc;
+    }
+    .profile-menu-container {
+        margin: 0 10px !important;
+    }
+    .profile-menu-container .mobile-menu-dropdown {
+        height: 30px !important;
+    }
+    .profile-menu-container .triangle-down {
+        top: -6px !important;
+    }
+
+
+    .profile-menu-container  .sub {
+    
+     width: 99.5% !important;
+box-sizing: border-box;
+    }
+    .table>thead>tr>th,
+    .table>tbody>tr>th,
+    .table>tfoot>tr>th,
+    .table>thead>tr>td,
+    .table>tbody>tr>td,
+    .table>tfoot>tr>td {
+        padding: 8px;
+        line-height: 1.42857143;
+        vertical-align: top;
+        border-top: 1px solid #ddd;
+        max-width: 100%;
+        white-space: pre;
+    }
+    .shopping-activity-container {
+        padding: 28px 14px 0px;
+        border: 1px solid #ccc;
+        margin-top: 25px;
+    }
+    .shopping-table {
+        padding: 0px;
+        width: 100%;
+        overflow-y: scroll;
+    }
+    .faq-container ul {
+        margin-left: 15px;
+    }
+    #rail {
+        display: none;
+    }
+    .cashback-tracking-box {
+        flex-basis: 180px;
+        flex: 1;
+        border: 1px solid #ccc;
+        padding: 12px 22px 0px;
+        position: relative;
+        margin-bottom: 17px;
+    }
+    #content {
+        background-color: #f5f5f5;
+        border-left: 22px solid #fcfcf9;
+        width: 100%;
+        margin: 0 auto;
+        float: left;
+    }
+    #content {
+        background-color: #f5f5f5;
+        border-left: 0px solid #fcfcf9;
+        width: 100%;
+        margin: 0 auto;
+        float: left;
+    }
+    .cashback-tracking-paypal-btn {
+        margin-bottom: 20px;
+    }
+    .cashback-tracking-container {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 9px;
+        flex-direction: column;
+    }
+    .account-page {
+        padding: 20px 15px;
+    }
+    .cashback-tracking-box:last-child {
+        margin-bottom: 0px;
+        ;
+    }
+    #main {
+        background-color: #fcfcf9;
+        float: right;
+        margin-right: 0;
+        min-height: 800px;
+        padding-right: 0px;
+        width: 100%;
+    }
+
+
+
+
+    .view-all-container .horizontal-list li {
+        text-align: left;
+        display: block;
+        line-height: 2;
+    
+    }
+    .view-all-container .horizontal-list li a {
+        font-size: 14px;
+
+    }
+    .view-all-container {
+        background: none;
+    }
+
+  .atoz li {
+        text-align: center;
+        display: inline-block;
+        line-height: 2.31;
+    }
+
+    .atoz .title {
+
+        display: none;
+    }
+ .atoz li a:link {
+        color: #91c44a;
+        text-decoration: none;
+        padding: 0 17px 0 0px;
+        font-size: 16px;
+  
+    }
+
+    .view-all-container .horizontal-list {
+        margin: 0 auto 0px;
+        padding: 14px 0 14px 20px;
+        box-shadow: none;
+    }
+
+
+
+    .atoz  {
+        padding: 20px;
+    }
+
+    .help-modal-container {
+        width: 100% !important;
+    }
+
     .help-boxes-2C {
         flex-direction: column;
     }
@@ -738,7 +956,7 @@
         position: relative;
         width: 100%;
         background: #fff;
-        border-top: 0px solid;
+        /* border-top: 0px solid; */
     }
     .mobile-deals-menu a span {}
     .ccode-popularstores {
@@ -1913,6 +2131,34 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    #main {
+        background-color: #fcfcf9;
+        float: right;
+        margin-right: 0;
+        min-height: 800px;
+        padding-right: 23px;
+        width: 75%;
+    }
+    #content {
+        background-color: #fcfcf9;
+        border-left: 0px solid #fcfcf9;
+        width: 100%;
+        margin: 0 auto;
+        /* float: left; */
+    }
+    .cashback-tracking-box {
+        flex-basis: 157px;
+        /* flex: 1; */
+        border: 1px solid #ccc;
+        padding: 12px 10px;
+        position: relative;
+    }
+    .atoz .title {
+
+        display: none;
+    }
+
+
     .super-shopper .form_label_error {
         text-align: center;
         width: 100%;
@@ -1927,6 +2173,7 @@
     .super-shopper .thankyou_screen {
         width: 100%;
         padding: 0px 20px;
+        box-sizing: border-box;
     }
     .super-shopper .terms {
         margin: 0px;
@@ -3161,6 +3408,31 @@
     }
 }
 @media only screen and (min-width: 768px) and (max-width: 1023px){
+
+    .account-page .signin-block, .account-page .signup-block {
+        position: static;
+        padding: 23px 0 0 30px;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .account-page  .signin {
+
+        color: #444;
+        text-decoration: none;
+        display: inline-block;
+        background-position: 20px -507px;
+        padding: 24px 5px 25px 12px;
+    
+    }
+
+    .mod-signup .hd, .mod-signin .hd, .mod-forgotpwd .hd {
+
+        margin-bottom: 0px;
+    
+    }
+
+
     .promo-container {
         width: 95%;
     }
@@ -3231,6 +3503,9 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 9999px) {
+    .profile-menu-container {
+        display: none;
+    }
     .owl-carousel .owl-stage-outer { height: 253px;}
 
     .coupons-code-main-heading-box {
